# google-docs-dupe

./: .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs  types.rs
backend/src/db/: mongodb.rs
backend/src/editor/: document.rs  mod.rs  prosemirror.rs
backend/src/websocket/: handler.rs  mod.rs  types.rs
frontend/: index.html  package-lock.json  package.json  svelte.config.js
frontend/src/: App.vue  Dockerfile  main.ts  nuxt.config.ts  package-lock.json  package.json
frontend/src/assets/: base.css  main.css
frontend/src/assets/js/: bundle.js
frontend/src/assets/style/: global.scss
frontend/src/assets/styles/: _shared.scss  global.scss
frontend/src/components/: ProseMirrorEditor.vue  QuillEditor.vue  docSidebar.vue  taleweaver-toolbar.vue  taleweaver.vue
frontend/src/components/landing page/: CTASection.vue  FAQSection.vue  footer.vue  heroSection.vue  heroTabs.vue  navbar.vue
frontend/src/components/toolBar/: toolBar.vue
frontend/src/components/topMenu/: topMenu.vue
frontend/src/composables/: useDocWebSocket.ts  useUserSync.ts  useWebsocket.ts  useWebsockets.ts
frontend/src/editor/: blank.ts  littleRedRidingHood.ts  resume.ts
frontend/src/lib/components/: Toolbar.svelte
frontend/src/lib/stores/: store.ts
frontend/src/middleware/: auth.global.ts  auth.ts
frontend/src/pages/: index.vue  taleweaver.vue
frontend/src/pages/document/: [id].vue  index.vue
frontend/src/plugins/: prosemirror.ts  taleweaver.ts
frontend/src/routes/: +page.svelte
(+3 files in other folders)
