[package]
name = "docs_dupe_rust"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
axum = { version = "0.6", features = ["ws"] }
tower-http = { version = "0.3", features = ["fs"] }
futures-util = "0.3"
serde = "1.0.188"
futures = "0.3.28"

[dependencies.mongodb]
version = "3.1.0"







