[package]
name = "docs_dupe_rust"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
axum = { version = "0.6", features = ["ws"] }
tower-http = { version = "0.4", features = ["cors", "fs"] }
futures-util = "0.3"
tower = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.28"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"

[dependencies.mongodb]
version = "3.1.0"







